<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Heart Observe</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="graph">Graph</string>
    <string name="delete_dlg_title">Delete Record?</string>
    <string name="saved_entry">Saved Entry</string>
    <string name="graph_title">Blood Pressure</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="location">Location</string>
    <string name="side">Side</string>
    <string name="upperarm">Upper Arm</string>
    <string name="forearm">Forearm</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="rightside">Right Side</string>
    <string name="leftside">Left Side</string>
    <string name="notes">notes</string>
    <string name="layoutdivider">Layout Divider</string>
    <string name="forwardslashseparator">/</string>
    <string name="no_graph_data">Nothing to graph. Check settings</string>
    <string name="preferences">Settings</string>
    <string name="time_filter_summary">Limit time range on graph?</string>
    <string name="time_filter_title">Time filter</string>
    <string name="start_time_title">Start Time</string>
    <string name="end_time_title">End Time</string>
    <string name="date_filter_summary">Limit date range on graph?</string>
    <string name="date_filter_title">Date filter</string>
    <string name="start_date_title">Start Date</string>
    <string name="end_date_title">End Date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
