<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/list"
    android:icon="@drawable/ab_list"
    android:showAsAction="ifRoom"
    android:title="@string/edit">
  </item>
  <item
    android:id="@+id/graph"
    android:icon="@drawable/ab_graph"
    android:showAsAction="ifRoom"
    android:title="@string/graph">
  </item>
  <item
    android:id="@+id/add"
    android:icon="@drawable/ab_add"
    android:showAsAction="ifRoom"
    android:title="@string/add">
  </item>
  <item
    android:id="@+id/help"
    android:icon="@android:drawable/ic_menu_help"
    android:showAsAction="never"
    android:title="@string/help">
  </item>
  <item
    android:id="@+id/about"
    android:icon="@android:drawable/ic_menu_info_details"
    android:showAsAction="never"
    android:title="@string/about">
  </item>
</menu>
